030-software/fluxcd/apps/city-roads/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: city-roads
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: city-roads
  template:
    metadata:
      labels:
        app: city-roads
        policy.gatekeeper.sh/ignore-psp-volume-types: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: city-roads
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: city-roads
      containers:
        - name: city-roads
          image: busybox:1.38
          args: ["busybox", "httpd", "-f", "-v", "-p", "8080"]
          workingDir: /assets
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 64Mi
          volumeMounts:
            - name: assets
              mountPath: /assets
              subPath: usr/share/nginx/html
      volumes:
        - name: assets
          image:
            reference: shokohsc/city-roads:release-20210531100947-17-g84a77a5
