030-software/fluxcd/apps/city-roads/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: city-roads
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: city-roads
