030-software/fluxcd/apps/city-roads/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: city-roads
  annotations:
    dashboard.${domain}/name: city-roads
    dashboard.${domain}/url: https://city-roads.${domain}
    dashboard.${domain}/icon: navigation
spec:
  hostnames:
    - city-roads.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: city-roads
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
